MON-195 updateAgentAliases amon-relay background work is misreading vmadm's '-' value for empty

--- a/TODO.txt
+++ b/TODO.txt
@@ -96,6 +96,7 @@ In no particular order, other things to look at in Amon.
 
 # someday/maybe
 
+- bitrot: mark prefers node-backoff to node-retry
 - long stack traces: https://github.com/mattinsler/longjohn
 - nicer notification email formatting. Apple Store example: (trent's)
   https://mail.google.com/mail/u/1/?ui=2&shva=1#inbox/137c7a2c41219cee
